<resources>
    <string name="app_name">InventFlow</string>

    <string name="desc_almacen">Detalles almacenes</string>
    <string name="desc_producto">Detalles productos</string>
    <string name="desc_proveedor">Detalles proveedores</string>
    <string name="desc_movimiento">Detalles movimientos</string>


    <!-- Activity login -->
    <string name="welcome_message">Bienvenido a InventFlow</string>
    <string name="username_hint">  Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_legacy">Acepto condiciones legales</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="ligin_password">Olvidaste tu contraseña?</string>

    <!-- Activity main -->

    <!-- Activity almacen -->
    <string name="almacen_allinfo">Información general</string>
    <string name="almacen_disponible">Alm. disponible</string>
    <string name="almacen_totalart">Total art.</string>
    <string name="almacen_valor">Valor</string>

    <!-- Activity formulario almacen -->
    <string name="form_almacen_foto">Foto del almacén*</string>
    <string name="form_almacen_dato">Datos del almacén</string>
    <string name="form_almacen_id">ID</string>
    <string name="form_almacen_nombre">Nombre</string>
    <string name="form_almacen_direccion">Dirección</string>
    <string name="form_almacen_save">Guardar los cambios</string>

    <!-- Activity splash  -->
    <string name="splash_title">InventFlow</string>

    <!-- Activity first fragment-->
    <string name="fragment1_operations">Mis operaciones</string>
    <string name="fragment1_almacen">Almacenes</string>
    <string name="fragment1_producto">Productos</string>
    <string name="fragment1_movimiento">Movimientos</string>
    <string name="fragment1_proveedor">Proveedor</string>
    <string name="fragment1_recientes">Articulos recientes</string>
    <string name="fragment1_language">Idiomas</string>

    <!-- Activity third fragment-->
    <string name="fragment3_user">Haojie Li</string>
    <string name="fragment3_email">ty0192sd@gmail.com</string>
    <string name="fragment3_configuration">Configuración</string>
    <string name="fragment3_enviar">Enviar comentarios</string>
    <string name="fragment3_terminos">Términos de uso</string>
    <string name="fragment3_politica">Politica de privacidad</string>
    <string name="fragment3_about">About</string>
    <string name="fragment3_sesion">Cerrar sesión</string>

    <!-- Bottom nav menu -->
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_productos">Productos</string>
    <string name="bottom_menu_perfil">Perfil</string>

    <!-- Descripciones imagen -->
    <string name="description_img">Es una imagen</string>
    <string name="articulos_options">Articulos options</string>
    <string name="product_name">NAME OF PRODUCTS CHAIR HAHAHEHE</string>
    <string name="product_image">Product image</string>
    <string name="product_id">AAABBBCCCDDD</string>
    <string name="dropdownmenu_edit">Detalles</string>
    <string name="dropdownmenu_delete">Eliminar</string>
    <string name="datos_almacen_textview">Datos almacén</string>
    <string name="img_description">ImageFile</string>
    <string name="last_modification">Última modificación</string>
    <string name="responsable">Responsable</string>
    <string name="description">Notas</string>
    <string name="name">Nombre</string>
    <string name="id">ID</string>
    <string name="full_direction">Direccion completa</string>
    <string name="product_categoria">Categoría</string>
    <string name="product_proveedor">Proveedor</string>


</resources>