<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="200dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_articulo"
        android:layout_width="120dp"
        android:layout_height="180dp"
        android:layout_margin="5dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/cardview_selector"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imgArticulo"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:contentDescription="@string/product_image"
                android:src="@drawable/png_monster" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvNameArticulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/tvOption"
                    android:layout_width="27dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="51dp"
                    android:contentDescription="@string/articulos_options"
                    android:src="@drawable/img_etc" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvProductId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/product_id" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>