<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.almacen.ActivityAlmacen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/custom_button"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="InventFlow"
        app:titleTextColor="@color/custom_blancoHueso" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="7dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:id="@+id/imgMain1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/img_layout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/almacen_allinfo"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="70dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/almacen_disponible"
                android:textColor="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/almacen_totalart"
                android:textColor="@color/gray" />

            <TextView
                android:layout_width="47dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/almacen_valor"
                android:textAlignment="center"
                android:textColor="@color/gray" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="95dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cant_alm"
                android:layout_width="97dp"
                android:layout_height="wrap_content"
                android:text="5"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tv_unit_art"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="0 unit"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tvValor"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="2401€"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="11sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAlma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            tools:listitem="@layout/viewholder_almacen" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/custom_verde1"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swipe"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Circular"
        app:srcCompat="@drawable/ic_button_add" />


</androidx.constraintlayout.widget.ConstraintLayout>